chg: label change for proceed to buy, cart icon, spacing on order history page

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -79,7 +79,7 @@
       "Select Payment Option": "পেমেন্ট অপশন নির্বাচন করুন",
       "Cash on delivery": "কাশ অন ডেলিভারি",
       "Prepaid": "প্রিপেইড",
-      "Proceed to Buy": "কেনার জন্য এগিয়ে যান"
+      "Proceed to Buy": "পরিশোধ করতে এগিয়ে যান"
     }
   },
   "Cart Items": {
