--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -79,7 +79,7 @@
       "Select Payment Option": "Select Payment Option",
       "Cash on delivery": "Cash on delivery",
       "Prepaid": "Prepaid",
-      "Proceed to Buy": "Proceed to Buy"
+      "Proceed to Buy": "Proceed to Pay"
     }
   },
   "Cart Items": {
