--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -79,7 +79,7 @@
       "Select Payment Option": "भुगतान विकल्प चुनें",
       "Cash on delivery": "कैश ओन डिलिवरी",
       "Prepaid": "प्रीपेड",
-      "Proceed to Buy": "खरीदने के लिए आगे बढ़ें"
+      "Proceed to Buy": "भुगतान करने के लिए आगे बढ़ें"
     }
   },
   "Cart Items": {
