--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -79,7 +79,7 @@
       "Select Payment Option": "पेमेंट पर्याय निवडा",
       "Cash on delivery": "कॅश ओन डिलिव्हरी",
       "Prepaid": "प्रीपेड",
-      "Proceed to Buy": "खरेदी करण्यासाठी पुढे जा"
+      "Proceed to Buy": "पैसे भरण्यासाठी पुढे जा"
     }
   },
   "Cart Items": {
