--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -79,7 +79,7 @@
       "Select Payment Option": "கட்டண விருப்பத்தைத் தேர்ந்தெடுக்கவும்",
       "Cash on delivery": "கேஷ் ஒன் டெலிவரி",
       "Prepaid": "ப்ரீபெய்ட்",
-      "Proceed to Buy": "வாங்க தொடரவும்"
+      "Proceed to Buy": "செலுத்துவதற்கு தொடருங்கள்"
     }
   },
   "Cart Items": {
