fix: add more button on my cart page, order filter

--- a/src/i18n/bn.json
+++ b/src/i18n/bn.json
@@ -43,6 +43,7 @@
   "Cart": {
     "Cart": "কার্ট",
     "My Cart": "মাই কার্ট",
+    "Add More Items": "আরো আইটেম যোগ করুন",
     "Customise": "কাস্টমাইজ করুন",
     "Delivery Address": "সরবরাহের ঠিকানা",
     "Change": "পরিবর্তন",
