--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -43,6 +43,7 @@
   "Cart": {
     "Cart": "Cart",
     "My Cart": "My Cart",
+    "Add More Items": "Add More Items",
     "Customise": "Customise",
     "Delivery Address": "Delivery Address",
     "Change": "Change",
