--- a/src/i18n/hi.json
+++ b/src/i18n/hi.json
@@ -43,6 +43,7 @@
   "Cart": {
     "Cart": "कार्ट",
     "My Cart": "मेरा कार्ट",
+    "Add More Items": "अधिक आइटम जोड़ें",
     "Customise": "अनुकूलित करें",
     "Delivery Address": "डिलिवरी का पता",
     "Change": "परिवर्तन",
