--- a/src/i18n/mr.json
+++ b/src/i18n/mr.json
@@ -43,6 +43,7 @@
   "Cart": {
     "Cart": "कार्ट",
     "My Cart": "माय कार्ट",
+    "Add More Items": "अधिक आयटम जोडा",
     "Customise": "सानुकूल करा",
     "Delivery Address": "वितरण पत्ता",
     "Change": "बदला",
