--- a/src/i18n/ta.json
+++ b/src/i18n/ta.json
@@ -43,6 +43,7 @@
   "Cart": {
     "Cart": "கார்ட்",
     "My Cart": "மை கார்ட்",
+    "Add More Items": "மேலும் பொருட்களைச் சேர்க்கவும்",
     "Customise": "தனிப்பயனாக்கலாம்",
     "Delivery Address": "டெலிவரி முகவரி",
     "Change": "மாற்றம்",
